--- a/client/src/styles/components/RecentNotes.module.css
+++ b/client/src/styles/components/RecentNotes.module.css
@@ -1,17 +1,20 @@
 .recent-notes-container{
     display: flex;
-    flex-direction: column;
     align-items: center;
+    justify-content: start;
+    flex-wrap: wrap;
     padding: 0.5rem;
+    flex-direction: row;
 
     margin: 0 auto;
     min-height: 80%;
-    min-width: 70%;
+    width: fit-content;
 
-    border: 0.5px solid #000000;
-    box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.4);
+    
+
     border-radius: 22px;
     height: fit-content;
+    border: 1px solid black;
 
     gap: 12px;
 }
@@ -23,8 +26,8 @@
 .recent-note-item{
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    width: 90%; /* No need to set padding since the width essentially "includes" it as a %.*/
+    width: 25%;
+    height: 150px;
     border: 1px solid black;
     border-radius: 12px;
     padding: inherit;
