--- a/client/src/styles/views/Dashboard.css
+++ b/client/src/styles/views/Dashboard.css
@@ -19,12 +19,13 @@ html,
 
 .dashboard-content {
   display: flex;
+  flex-direction: column;
   height: 100%;
   margin: 1.5rem;
 }
 
 .col-1-container {
-  width: 60%;
+  width: 75%;
   padding: 1rem; /* Padding for both col-1/2 should be the same to maintain alignment.*/
 }
 
@@ -32,8 +33,12 @@ html,
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  width: 40%;
+  width: 25%;
   padding: 1rem;
+}
+
+.col-wrapper{
+  display: flex;
 }
 
 .link {
